Steam_Epic_URL_Converter.ahk - v1.0.1 add underscore to script's file name

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ BackUp
 _New
 /Testing*.ahk
 /Credential.csv
-/Steam Epic URL Converter/Steam Epic URL Converter.exe
+/Steam_Epic_URL_Converter/Steam_Epic_URL_Converter.exe
 /Lib/FindClick.pdf
