--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /Testing*.ahk
-/Credential.csv
+/Credentials.csv
 /Steam_Epic_URL_Converter/Steam_Epic_URL_Converter.exe
 /Lib/FindClick.pdf
 /ntfy.exe
+/Game_SnowRunner_Logistics/*.bak
+/Game_SnowRunner_Logistics/Maps/*.rar
