Services\Services.ahk - initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /Game_SnowRunner_Logistics/Maps/*.rar
 /Lib/FindClick.pdf
 /Steam_Epic_URL_Converter/Steam_Epic_URL_Converter.exe
+/Services/Services.exe
 /AdvancedRun.exe
 /Credentials.csv
 /ntfy.exe
