--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/Game_Captain_of_Industry/Blueprints/daxfb-calculator
 /Game_SnowRunner/Logistics/*.bak
 /Game_SnowRunner/Logistics/Maps/*.rar
 /Lib/FindClick.pdf
